--- a/css/main.css
+++ b/css/main.css
@@ -1,5 +1,5 @@
 nav.navbar {
-  background-color: rgba(0, 0, 0, 0.7) !important;
+  background-color: rgba(95, 95, 95, 0.7) !important;
 }
 nav.navbar a.navbar-brand {
   font-size: 1.5em;
@@ -27,8 +27,69 @@ nav.navbar #navbarResponsive ul a.nav-link.active, nav.navbar #navbarResponsive 
   color: #1ebba3;
 }
 
-.home-inner {
-  background-image: url("img/computers.png") !important;
+#home .landing {
+  position: relative;
+  width: 100%;
+  height: 100vh;
+  display: table;
+  z-index: -1;
+}
+#home .landing .home-wrap {
+  clip: rect(0, auto, auto, 0);
+  position: absolute;
+  top: 0;
+  left: 0;
+  width: 100%;
+  height: 100%;
+}
+#home .landing .home-wrap .home-inner {
+  position: fixed;
+  display: table;
+  top: 0;
+  left: 0;
+  width: 100%;
+  height: 100%;
+  background-size: cover;
+  background-position: center center;
+  background-image: url(/img/cover.jpg);
+  filter: contrast(60%);
+}
+#home .caption {
+  width: 100%;
+  max-width: 100%;
+  position: absolute;
+  top: 38%;
+  z-index: 1;
+  color: white;
+  text-transform: uppercase;
+}
+#home .caption h1 {
+  font-size: 3rem;
+  font-weight: 600;
+  letter-spacing: 0.3rem;
+  text-shadow: 0.1rem 0.1rem 0.8rem black;
+  padding-bottom: 1rem;
+}
+#home .caption h3 {
+  font-size: 2rem;
+  text-shadow: 0.1rem 0.1rem 0.5rem black;
+  padding-bottom: 1.6rem;
+  letter-spacing: 0.2rem;
+  margin-bottom: 2rem;
+}
+#home .caption .btn-light {
+  font-size: 1.3rem;
+  font-weight: 500;
+  padding: 0.5rem 1.3rem;
+  border: 0.3rem solid white;
+  background-color: transparent;
+  color: white;
+  text-decoration: none;
+  letter-spacing: 0.1rem;
+}
+#home .caption .btn-light:hover {
+  color: #888888;
+  background-color: white;
 }
 
 /*# sourceMappingURL=main.css.map */
