--- a/scss/main.scss
+++ b/scss/main.scss
@@ -108,5 +108,35 @@ nav.navbar {
 }
 
 #features {
+    padding: 2rem;
+    h1 {
+        color: color.$primary-color;
+        letter-spacing: 5px;
+    }
+    p {
+        margin-top: 1em;
+        font-size: 1.1em;
+    }
+    ul {
+        margin: 0;
+        padding: 0;
+        li {
+            font-size: 1em;
+            font-weight: 200;
+            list-style: none;
+        }
+    }
+}
 
+#clients {
+    padding: 2rem;
+    background-color: color.$primary-color;
+    h1 {
+        color: white;
+        letter-spacing: 5px;
+    }
+    p {
+        margin-top: 1em;
+        font-size: 1.1em;
+    }
 }
