--- a/scss/main.scss
+++ b/scss/main.scss
@@ -1,37 +1,22 @@
 @use 'color';
+@use 'mixin';
 
-body {
-    .offset::before {
-        display: block;
-        content: '';
-        height: 3.7rem;
-        margin-top: -3.7rem;
-    }
+.offset::before {
+    display: block;
+    content: "";
+    height: 4rem;
+    margin-top: -4rem;
 }
 
 nav.navbar {
     background-color: rgba(95, 95, 95, 0.7) !important;
-    a.navbar-brand {
-        font-size: 1.5em;
-        font-weight: bold;
-        span {
-            border: 2px solid color.$primary-color;
-            padding: 0 5px 1px 5px;
-            background-color: transparent;
-            border-radius: 3px;
-            color: color.$primary-color;
-        }
-    }
+    @include mixin.navbar-brand();
     #navbarResponsive {
         ul {
-            display: flex;
-            width: 50%;
-            justify-content: space-between;
             a.nav-link {
                 font-size: 14px;
                 color: white;
                 font-weight: 500;
-                text-transform: uppercase;
                 &.active, &:hover {
                     color: color.$primary-color;
                 }
@@ -107,36 +92,56 @@ nav.navbar {
     }
 }
 
+#register {
+    @include mixin.title-desc();
+    .btn-primary-color {
+        border: 1px solid color.$primary-color;
+        background-color: color.$primary-color;
+        color: white;
+        padding: 0.3em 1em;
+        opacity: 0.8;
+        &:hover {
+            opacity: 1;
+        }
+    }
+}
+
 #features {
-    padding: 2rem;
-    h1 {
-        color: color.$primary-color;
-        letter-spacing: 5px;
-    }
-    p {
-        margin-top: 1em;
-        font-size: 1.1em;
-    }
+    @include mixin.title-desc();
     ul {
         margin: 0;
         padding: 0;
-        li {
+        a {
             font-size: 1em;
             font-weight: 200;
-            list-style: none;
+            text-decoration: none;
+            color: black;
+            li {
+                list-style: none;
+                padding: 0 2px;
+                &:hover {
+                    background-color: color.$primary-color;
+                    color: white;
+                }
+            }
         }
     }
 }
 
 #clients {
+    @include mixin.title-desc();
+}
+
+#package {
     padding: 2rem;
-    background-color: color.$primary-color;
     h1 {
-        color: white;
-        letter-spacing: 5px;
+        @include mixin.title();
     }
     p {
-        margin-top: 1em;
-        font-size: 1.1em;
+        @include mixin.desc();
     }
+}
+
+#contact {
+    @include mixin.navbar-brand();
 }
