--- a/css/main.css
+++ b/css/main.css
@@ -1,4 +1,8 @@
-.offset::before {
+@import url("https://fonts.googleapis.com/css2?family=Lato:wght@300;400&display=swap");
+body {
+  font-family: "Lato", sans-serif;
+}
+body .offset::before {
   display: block;
   content: "";
   height: 4rem;
@@ -113,31 +117,70 @@ nav.navbar #navbarResponsive ul a.nav-link.active, nav.navbar #navbarResponsive 
   opacity: 1;
 }
 
-#features h1 {
+#facilities h1 {
   color: #1ebba3;
   letter-spacing: 5px;
 }
-#features p {
+#facilities p {
   margin-top: 1em;
   font-size: 1.1em;
 }
-#features ul {
-  margin: 0;
+#facilities .simbol .fa {
+  color: #1ebba3;
+  opacity: 0.8;
+  margin-top: 1em;
+}
+#facilities .simbol p {
+  color: black;
+  font-weight: 300;
+  text-transform: capitalize;
+  margin-top: 5px;
   padding: 0;
 }
-#features ul a {
-  font-size: 1em;
-  font-weight: 200;
-  text-decoration: none;
-  color: black;
-}
-#features ul a li {
-  list-style: none;
-  padding: 0 2px;
-}
-#features ul a li:hover {
-  background-color: #1ebba3;
+
+#package h1 {
   color: white;
+  letter-spacing: 5px;
+}
+#package p {
+  margin-top: 1em;
+  font-size: 1.1em;
+}
+#package h1, #package p.desc {
+  color: white;
+  text-shadow: 0.1rem 0.1rem 0.5rem black;
+}
+#package .card-text {
+  font-weight: 300;
+}
+#package .fixed-background {
+  position: relative;
+  width: 100%;
+}
+#package .fixed-wrap {
+  clip: rect(0, auto, auto, 0);
+  position: absolute;
+  top: 0;
+  left: 0;
+  width: 100%;
+  height: 100%;
+  z-index: -999 !important;
+}
+#package .fixed {
+  position: fixed;
+  display: block;
+  top: 0;
+  left: 0;
+  width: 100%;
+  height: 100%;
+  background-size: cover;
+  background-position: center center;
+  -webkit-transform: translateZ(0);
+  transform: translateZ(0);
+  will-change: transform;
+  background-image: url(/img/cover.jpg);
+  z-index: -1;
+  filter: contrast(60%);
 }
 
 #clients h1 {
@@ -145,18 +188,6 @@ nav.navbar #navbarResponsive ul a.nav-link.active, nav.navbar #navbarResponsive 
   letter-spacing: 5px;
 }
 #clients p {
-  margin-top: 1em;
-  font-size: 1.1em;
-}
-
-#package {
-  padding: 2rem;
-}
-#package h1 {
-  color: #1ebba3;
-  letter-spacing: 5px;
-}
-#package p {
   margin-top: 1em;
   font-size: 1.1em;
 }
@@ -172,6 +203,26 @@ nav.navbar #navbarResponsive ul a.nav-link.active, nav.navbar #navbarResponsive 
   background-color: transparent;
   border-radius: 3px;
   color: #1ebba3;
+}
+
+@media (max-width: 1024px) {
+  #home nav.navbar .navbar-nav {
+    margin-right: 3em;
+  }
+
+  #register img {
+    width: 350px;
+  }
+}
+@media (max-width: 768px) {
+  #home nav.navbar .navbar-nav {
+    margin-right: 6em;
+  }
+
+  #register img {
+    width: 280px;
+    height: 230px;
+  }
 }
 
 /*# sourceMappingURL=main.css.map */
