--- a/scss/main.scss
+++ b/scss/main.scss
@@ -1,11 +1,10 @@
 @use 'color';
 @use 'mixin';
+@use 'font';
 
-.offset::before {
-    display: block;
-    content: "";
-    height: 4rem;
-    margin-top: -4rem;
+body {
+    font-family: font.$primary-font;
+    @include mixin.offset();
 }
 
 nav.navbar {
@@ -106,25 +105,58 @@ nav.navbar {
     }
 }
 
-#features {
+#facilities {
     @include mixin.title-desc();
-    ul {
-        margin: 0;
-        padding: 0;
-        a {
-            font-size: 1em;
-            font-weight: 200;
-            text-decoration: none;
-            color: black;
-            li {
-                list-style: none;
-                padding: 0 2px;
-                &:hover {
-                    background-color: color.$primary-color;
-                    color: white;
-                }
-            }
+    .simbol {
+        .fa {
+            color: color.$primary-color;
+            opacity: 0.8;
+            margin-top: 1em;
         }
+        p {
+            color: black;
+            font-weight: 300;
+            text-transform: capitalize;
+            margin-top: 5px;
+            padding: 0;
+        }
+    }
+}
+
+#package {
+    @include mixin.title-desc(white);
+    .card-text {
+        font-weight: 300;
+    }
+    .fixed-background {
+        position: relative;
+        width: 100%;
+    }
+    .fixed-wrap {
+        clip: rect(0, auto, auto, 0);
+        position: absolute;
+        top: 0;
+        left: 0;
+        width: 100%;
+        height: 100%;
+        z-index: -999!important;
+    }
+    .fixed {
+        position: fixed;
+        display: block;
+        top: 0;
+        left: 0;
+        width: 100%;
+        height: 100%;
+        background-size: cover;
+        background-position: center center;
+        -webkit-transform: translateZ(0);
+                transform: translateZ(0);
+        will-change: transform;
+
+        background-image: url(/img/cover.jpg);
+        z-index: -1;
+        filter: contrast(60%);
     }
 }
 
@@ -132,16 +164,39 @@ nav.navbar {
     @include mixin.title-desc();
 }
 
-#package {
-    padding: 2rem;
-    h1 {
-        @include mixin.title();
+#contact {
+    @include mixin.navbar-brand();
+}
+
+@media (max-width: 1024px) {
+    #home {
+        nav.navbar {
+            .navbar-nav {
+                margin-right: 3em;
+            }
+        }
     }
-    p {
-        @include mixin.desc();
+
+    #register {
+        img {
+            width: 350px;
+        }
     }
 }
 
-#contact {
-    @include mixin.navbar-brand();
+@media (max-width: 768px) {
+    #home {
+        nav.navbar {
+            .navbar-nav {
+                margin-right: 6em;
+            }
+        }
+    }
+
+    #register {
+        img {
+            width: 280px;
+            height: 230px;
+        }
+    }
 }
