--- a/scss/_mixin.scss
+++ b/scss/_mixin.scss
@@ -17,6 +17,12 @@
     p {
         @include desc();
     }
+    @if $color == white {
+        h1, p.desc {
+            color: $color;
+            text-shadow: .1rem .1rem .5rem black;
+        }
+    }
 }
 
 @mixin navbar-brand() {
@@ -35,8 +41,10 @@
 }
 
 @mixin offset {
-    display: block;
-    content: "";
-    height: 4rem;
-    margin-top: -4rem;
+    .offset::before {
+        display: block;
+        content: "";
+        height: 4rem;
+        margin-top: -4rem;
+    }
 }
